Fixed the overlapping copyright text

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -77,9 +77,9 @@ Specifies the type of positioning method used for an element (static, relative,
 }
 
 #copyright {
-  position: fixed;
+  position: absolute;
   width: 1000px;
-  text-align: bottom;
+  text-align: center;
   bottom: 20px;
 }
 /*add webmap-reviews to the css and aligned the text to the left, added a font
